--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -1482,7 +1482,7 @@ contact us
 */
 
 section.contact-us {
-  background-image: url(../images/bgcontact.png);
+  background-image: url(../images/contactusbg.png);
   background-position: center center;
   background-attachment: fixed;
   background-repeat: no-repeat;
